--- a/about/index.html
+++ b/about/index.html
@@ -88,15 +88,15 @@
 <ul>
 <li><strong>Software</strong>
 <ul>
-<li><strong>Estadístico</strong> R, Stata.</li>
-<li><strong>Sistema manejador de BD</strong> MySQL, PostgreSQL.</li>
-<li><strong>SIG</strong> PostGIS, QGIS, GeoPandas.</li>
-<li><strong>Otros</strong> LaTeX, RePast.</li>
+<li><strong>Estadístico:</strong> R, Stata.</li>
+<li><strong>Sistema manejador de BD:</strong> MySQL, PostgreSQL.</li>
+<li><strong>SIG:</strong> PostGIS, QGIS, GeoPandas.</li>
+<li><strong>Otros:</strong> LaTeX, RePast.</li>
 </ul>
 </li>
-<li><strong>Lenguajes</strong> Python, Java,C++, SQL.</li>
-<li><strong>Distribuciones Linux</strong> Ubuntu (shell scripting).</li>
-<li><strong>Frameworks</strong> Flask(Python), Spring (Java).</li>
+<li><strong>Lenguajes:</strong> Python, Java,C++, SQL.</li>
+<li><strong>Distribuciones Linux:</strong> Ubuntu (shell scripting).</li>
+<li><strong>Frameworks MVC:</strong> Flask(Python), Spring (Java).</li>
 </ul>
 <h2 id="contacto">Contacto</h2>
 <h3 id="social">Social</h3>
